# smali

./: .gitignore  Cargo.toml  LICENSE-commercial  README.MD  writing-status.md
examples/: dex2smali.rs  main.rs  rootbeer.rs  smali2dex.rs
src/: lib.rs  smali_instructions.rs  smali_ops.rs  smali_parse.rs  smali_write.rs  types.rs
src/android/: binary_xml.rs  mod.rs  zip.rs
src/dex/: annotations.rs  builder.rs  dex_file.rs  encoded_values.rs  error.rs  instructions.rs  leb.rs  mod.rs  opcode_format.rs  opcodes.rs  values.rs
src/kotlin/: bit_encoding.rs  metadata.rs  mod.rs
src/tests/: annotations.rs  dex_debug.rs  dex_roundtrip.rs  dexdump_cases.rs  kotlin_metadata.rs  mod.rs  multi_dex.rs  opcode_tests.rs
tests/: OkHttpClient.smali  RootbeerManifest.xml  classes2.dex  teapot.dex
tests/smali_classes11/okio/: -DeprecatedOkio.smali  -DeprecatedUtf8.smali  AsyncTimeout$sink$1.smali  AsyncTimeout$source$1.smali  AsyncTimeout.smali  BlackholeSink.smali  Buffer$inputStream$1.smali  Buffer.smali  ByteString$Companion.smali  ByteString.smali  CipherSink.smali  CipherSource.smali  DeflaterSink.smali  FileHandle$FileHandleSink.smali  FileHandle$FileHandleSource.smali  FileHandle.smali  FileMetadata.smali  FileSystem.smali  ForwardingFileSystem.smali  ForwardingSink.smali  ForwardingSource.smali  ForwardingTimeout.smali  GzipSink.smali  GzipSource.smali  HashingSink$Companion.smali  HashingSink.smali  HashingSource$Companion.smali  HashingSource.smali  InflaterSource.smali  InputStreamSource.smali  JvmSystemFileSystem.smali  NioSystemFileSystem.smali  Okio__JvmOkioKt.smali  Options$Companion.smali  OutputStreamSink.smali  Path$Companion.smali  PeekSource.smali  Pipe$sink$1.smali  Pipe$source$1.smali  Pipe.smali  (+14 more)
tests/smali_classes11/okio/internal/: FixedLengthSource.smali  ResourceFileSystem$Companion.smali  ResourceFileSystem.smali  ZipKt.smali  _BufferKt.smali  _ByteStringKt.smali  _FileSystemKt.smali  _RealBufferedSinkKt.smali  _RealBufferedSourceKt.smali  _SegmentedByteStringKt.smali  _Utf8Kt.smali
tests/smali_classes11/org/greenrobot/eventbus/: AsyncPoster.smali  (+24 more)
(+80 files in other folders)
