[package]
name = "smali"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "A library to read and write Android disassembly smali files."
readme = "README.MD"
repository = "https://github.com/azw413/smali"
keywords = ["android", "dex", "dalvik", "java", "smali"]
exclude = [ ".gitignore", ".idea/*" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
serde = { version = "1.0.204", features = ["derive"] }
cesu8 = "1.1.0"
log = "0.4.22"
rand = "0.9.0-alpha.2"