[package]
name = "smali"
version = "0.3.4"
edition = "2024"
license = "GPL-3.0-only"
description = "A library to read and write Android disassembly smali files."
readme = "README.MD"
repository = "https://github.com/azw413/smali"
keywords = ["android", "dex", "dalvik", "java", "smali"]
exclude = [ ".gitignore", ".idea/*" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "8"
serde = { version = "1.0", features = ["derive"] }
cesu8 = "1.1.0"
log = "0.4"
bitflags = "2.9"
once_cell = "1.21"
rangemap = "1.6"
num-traits = "0.2"
adler = "1.0"
sha1 = "0.10"
crc32fast = "1.3"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
